tests/snapshots/integration__integration_tests__approval_ui__force_bypasses_tty_check.snap
---
source: tests/integration_tests/approval_ui.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - test-force-tty
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mRunning post-create:[0m
[107m [0m  [1m[34mecho[0m [32m'test command'[0m[0m
✅ [32mCreated new worktree for [1m[32mtest-force-tty[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].test-force-tty[0m[0m
💡 [2m[2mRun `wt config shell install` to enable automatic cd[0m[0m

----- stderr -----
[0mtest command
