tests/snapshots/integration__integration_tests__approval_ui__run_hook_post_merge_requires_approval.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 1
----- stdout -----

----- stderr -----
🟡 [33m[1mrepo[22m needs approval to execute [1m1[22m command:[39m

⚪ post-merge:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Post-merge cleanup for {{ branch }}'[0m[2m[0m
❌ [31mCannot prompt for approval in non-interactive environment[39m

💡 [2mIn CI/CD, use [90m--force[39m to skip prompts. To pre-approve commands, use [90mwt hook approvals add[39m[22m
